Fix upper taskbar to not wrap when width is too small

--- a/css/styles.css
+++ b/css/styles.css
@@ -183,12 +183,14 @@ a:hover {
 .page-buttons {
     font-family: "Poppins", sans-serif;
     position: absolute;
-    width: 400px;
-    left: calc(50% - 200px);
+    width: max(400px, 30%);
+    /* width: 400px; */
+    left: calc(50% - max(200px, 15%));
     z-index: 5;
     justify-content: space-evenly !important;
     padding-top: 1em;
     align-items: stretch;
+    flex-wrap: nowrap !important;
 }
 
 .page-button {
